Fix z-index when using addons

--- a/src/bootstrap4-floating-label.scss
+++ b/src/bootstrap4-floating-label.scss
@@ -67,6 +67,9 @@ $transition-fast: 150ms cubic-bezier(0.4, 0, 0.2, 1);
   border-radius: $border-radius;
 
   font-size: $font-size-sm;
+
+  // Same z-index as .form-control:focus, see https://github.com/twbs/bootstrap/blob/v4.3.1/scss/_input-group.scss#L36
+  z-index: 3;
 }
 
 %label-above-input {
